--- a/mona_v1.0/tools/Makefile
+++ b/mona_v1.0/tools/Makefile
@@ -1,2 +1,2 @@
-all: fstest.cpp DiskDriver.cpp ../src/FAT12.cpp ../src/include/FAT12.h
-	g++ -o test.exe fstest.cpp DiskDriver.cpp ../src/FAT12.cpp -idirafter ../src/include
+all: fstest.cpp HogeDriver.cpp HogeDriver.h ../src/FAT12.cpp ../src/include/FAT12.h
+	g++ -o test.exe fstest.cpp HogeDriver.cpp ../src/FAT12.cpp -idirafter ../src/include
