--- a/mona_v1.0/tools/Makefile
+++ b/mona_v1.0/tools/Makefile
@@ -1,3 +1,3 @@
 all: fstest.cpp HogeDriver.cpp HogeDriver.h ../src/FAT12.cpp ../src/include/FAT12.h
-	g++ -o test.exe fstest.cpp HogeDriver.cpp ../src/FAT12.cpp -idirafter ../src/include
+	g++ -o test.exe fstest.cpp HogeDriver.cpp ../src/FAT12.cpp ../src/string.cpp -idirafter ../src/include
 	etags ./*.cpp ./*.h ../src/*.cpp ../src/include/*.h
