Created IDEDriver(expr) still can't read/write.

--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -42,7 +42,8 @@ SOURCES    = cstart.cpp            \
              disp.cpp              \
              syscalls.cpp          \
              BitMap.cpp            \
-             FAT12.cpp
+             FAT12.cpp              \
+             IDEDriver.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
