--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -14,7 +14,7 @@ BIN        = ../bin
 LIST       = ../list
 INCLUDE    = include
 STLINCLUDE = stlport
-DEVELOPER  = -DHIGE
+DEVELOPER  = -D$(MONA_DEVELOPER)
 CFINCLUDE  = -I$(INCLUDE) -I$(STLINCLUDE)
 TARGET     = $(BIN)/mona.img
 BOOT1      = $(BIN)/firstboot.bin
