Dynamic IRQ handler install(in progress)

--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -47,7 +47,8 @@ SOURCES    = cstart.cpp            \
              IDEDriver.cpp         \
              test_higepon.cpp      \
              test_mjt.cpp          \
-             sysresource.cpp
+             sysresource.cpp       \
+             ISADriver.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
