--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -55,6 +55,7 @@ SOURCES    = cstart.cpp            \
              Process.cpp           \
              Scheduler.cpp         \
              ProcessManager.cpp    \
+             MessageServer.cpp     \
 
 #             test_mjt.cpp
 #             IDEDriver.cpp
