--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -16,7 +16,8 @@ LIST       = ../list
 TOOLS      = ../tools
 INCLUDE    = include
 STLINCLUDE = stlport
-CFINCLUDE  = -I$(INCLUDE) -I$(STLINCLUDE)
+USERINCLUDE= user
+CFINCLUDE  = -I$(INCLUDE) -I$(STLINCLUDE) -I$(USERINCLUDE)
 TARGET     = $(BIN)/mona.img
 KERNEL_IMG = $(BIN)/KERNEL.IMG
 BOOT1      = $(BIN)/firstboot.bin
@@ -67,10 +68,10 @@ $(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL)
 	$(FAT_TOOL) $(TARGET)
 
 $(FAT_TOOL) : $(TOOLS)/fat_write.cpp FAT12.cpp include/FAT12.h string.cpp BitMap.cpp
-	$(CC) -DFS_TEST -o $(FAT_TOOL) $(TOOLS)/fat_write.cpp $(TOOLS)/HogeDriver.cpp FAT12.cpp string.cpp BitMap.cpp -idirafter include -idirafter $(TOOLS)
+	$(CC) -DFS_TEST -o $(FAT_TOOL) $(TOOLS)/fat_write.cpp $(TOOLS)/HogeDriver.cpp FAT12.cpp string.cpp BitMap.cpp -idirafter include -idirafter $(USERINCLUDE) -idirafter $(TOOLS)
 
-$(KERNEL) : $(OBJECTS) $(DRVROBJ) memcmp.o memmove.o mode12h.o ihandler.o core.o
-	$(LD) --Map kernel.map $(LFLAGS) -o$@ $(OBJECTS) memcmp.o memmove.o mode12h.o ihandler.o core.o
+$(KERNEL) : $(OBJECTS) $(DRVROBJ) memcmp.o memmove.o mode12h.o ihandler.o core.o userlib.o
+	$(LD) --Map kernel.map $(LFLAGS) -o$@ $(OBJECTS) memcmp.o memmove.o mode12h.o ihandler.o core.o userlib.o
 	$(NDISASM) -u $@ > $(LIST)/third.list
 	$(STRIP)  -O binary $@
 
@@ -79,6 +80,9 @@ memcmp.o : ./FreeBSD/memcmp.c
 
 memmove.o : ./FreeBSD/memmove.c
 	$(CC) $(CFLAGS) $(CFINCLUDE) -c ./FreeBSD/memmove.c -o memmove.o
+
+userlib.o : ./user/userlib.cpp
+	$(CC) $(CFLAGS) $(CFINCLUDE) -c ./user/userlib.cpp -o userlib.o
 
 .SUFFIXES: .cpp .o
 .cpp.o:
@@ -106,7 +110,7 @@ depend:
 	gcc -MM $(CFINCLUDE) $(CFLAGS) -- $(SOURCES) > $(ENV)/dependencies
 
 clean :
-	rm -f $(OBJECTS) $(TARGET) $(BOOT1) $(BOOT2) $(KERNEL) $(KERNEL_IMG) $(FAT_TOOL) memmove.o memcmp.o mode12h.o ihandler.o core.o
+	rm -f $(OBJECTS) $(TARGET) $(BOOT1) $(BOOT2) $(KERNEL) $(KERNEL_IMG) $(FAT_TOOL) memmove.o memcmp.o mode12h.o ihandler.o core.o userlib.o
 
 dist :
 	cd ../bin; zip  -9 ../../mona-$(VERSION)-image.zip  mona.img
