--- a/mona_v1.0/tools/Makefile
+++ b/mona_v1.0/tools/Makefile
@@ -5,7 +5,7 @@ all: ./elfview.exe ./sample.elf
 # 	etags ./*.cpp ./*.h ../src/*.cpp ../src/include/*.h
 
 ./elfview.exe: elfTest.cpp ../src/include/elf.h
-	g++ -DFS_TEST -o elfview.exe elfTest.cpp -idirafter ../src/include -idirafter../src/user
+	g++ -DFS_TEST -o elfview.exe elfTest.cpp ../src/elf.cpp -idirafter ../src/include -idirafter../src/user
 
 ./sample.elf: ../src/user/hello.cpp
 	gcc -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall  -I . -I ../src/user  -c ../src/user/hello.cpp -o ./hello.o
