--- a/mona_v1.0/src/env/cygwin.env
+++ b/mona_v1.0/src/env/cygwin.env
@@ -4,11 +4,5 @@ CC         = /usr/bin/g++
 LD         = /usr/bin/ld
 STRIP      = /usr/bin/strip
 LFLAGS     = -n -Ttext 0x1200 -static
-# for gcc2.95@cygwin
-#CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DBUILD_ON_LINUX
-
-# for gcc3.2@cygwin with memory debug
-#CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DMONA_DEBUG_MM
-
-## for gcc3.2@cygwin
+# for gcc3.x@cygwin
 CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall
