some build help

--- a/mona_v1.0/src/env/linux3.x.env
+++ b/mona_v1.0/src/env/linux3.x.env
@@ -5,3 +5,4 @@ LD         = ld
 STRIP      = strip
 LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
 CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DBUILD_ON_LINUX
+NFLAGS     = -DBUILD_ON_LINUX
