--- a/mona_v1.0/src/env/linux2.x.env
+++ b/mona_v1.0/src/env/linux2.x.env
@@ -4,4 +4,5 @@ CC         = g++
 LD         = ld
 STRIP      = strip
 LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
-CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DBUILD_ON_LINUX
+CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DNO_NEW_DELETE
+NFLAGS     = -DBUILD_ON_LINUX
