--- a/mona_v1.0/src/env/cygwin.env
+++ b/mona_v1.0/src/env/cygwin.env
@@ -5,4 +5,4 @@ LD         = /usr/bin/ld
 STRIP      = /usr/bin/strip
 LFLAGS     = -n -Ttext 0x1200 -static
 # for gcc3.x@cygwin
-CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall
+CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall -g
