--- a/mona_v1.0/src/env/linux3.x.env
+++ b/mona_v1.0/src/env/linux3.x.env
@@ -3,6 +3,7 @@ NDISASM    = ndisasm
 CC         = g++
 LD         = ld
 STRIP      = strip
+CONTRIB_LIB= ./contrib/linux_lib
 LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
-CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c
+CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -g
 NFLAGS     = -DBUILD_ON_LINUX
