--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -1,11 +1,12 @@
 NASM       = nasm
 NDISASM    = ndisasm
-CC         = g++
-LD         = ld
-STRIP      = strip
-LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
-CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c
-NFLAGS     = -DBUILD_ON_LINUX
+CC         = /usr/bin/g++
+LD         = /usr/bin/ld
+STRIP      = /usr/bin/strip
+CONTRIB_LIB= ./contrib/cygwin_lib
+LFLAGS     = -n -Ttext 0x1200 -static
+# for gcc3.x@cygwin
+CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall -g
 ENV        = env
 VERSION    = 0.1.1
 DOXYGEN    = doxygen
@@ -73,7 +74,7 @@ $(FAT_TOOL) : $(TOOLS)/fat_write.cpp FAT12.cpp include/FAT12.h string.cpp BitMap
 	$(CC) -DFS_TEST -o $(FAT_TOOL) $(TOOLS)/fat_write.cpp $(TOOLS)/HogeDriver.cpp FAT12.cpp string.cpp BitMap.cpp -idirafter include -idirafter $(USERINCLUDE) -idirafter $(TOOLS)
 
 $(KERNEL) : $(OBJECTS) $(DRVROBJ) mode12h.o ihandler.o core.o userlib.o
-	$(LD) --Map kernel.map $(LFLAGS) -o$@ $(OBJECTS) mode12h.o ihandler.o core.o userlib.o -L./contrib -lz
+	$(LD) --Map kernel.map $(LFLAGS) -o$@ $(OBJECTS) mode12h.o ihandler.o core.o userlib.o -L$(CONTRIB_LIB) -lz
 	cp $@ $(BIN)/mona.dbg
 	$(NDISASM) -u $@ > $(LIST)/third.list
 	$(STRIP)  -O binary $@
