--- a/mona_v1.0/src/env/cygwin.env
+++ b/mona_v1.0/src/env/cygwin.env
@@ -3,7 +3,7 @@ NDISASM    = ndisasm
 CC         = /usr/bin/g++
 LD         = /usr/bin/ld
 STRIP      = /usr/bin/strip
-CONTRIB_LIB= ./contrib/cygwin_lib
+CONTRIB_LIB= ./contrib/lib_cygwin
 LFLAGS     = -n -Ttext 0x1200 -static
 # for gcc3.x@cygwin
 CFLAGS     = -nostdlib -fno-exceptions  -fno-rtti -ffreestanding -Wall -g
