--- a/mona_v1.0/src/env/linux2.x.env
+++ b/mona_v1.0/src/env/linux2.x.env
@@ -4,6 +4,6 @@ CC         = g++
 LD         = ld
 STRIP      = strip
 CONTRIB_LIB= ./contrib/lib_linux
-LFLAGS     = -n -Ttext 0x1200 -static --oformat binary
+LFLAGS     = -n -Ttext 0x1200 -static
 CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -DNO_NEW_DELETE
 NFLAGS     = -DBUILD_ON_LINUX
