--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -1,62 +1,62 @@
-ENV        = env
-VERSION    = 0.1.1
-DOXYGEN    = doxygen
-BIN        = ../bin
-LIST       = ../list
-TOOLS      = ../tools
-INCLUDE    = include
-STLINCLUDE = stlport
-USERINCLUDE= user
-CNTRINCLUDE= contrib/include
-CFINCLUDE  = -I$(INCLUDE) -I$(STLINCLUDE) -I$(USERINCLUDE) -I$(CNTRINCLUDE)
-TARGET     = $(BIN)/mona.img
-KERNEL_IMG = $(BIN)/KERNEL.IMG
-BOOT1      = $(BIN)/firstboot.bin
-BOOT2      = $(BIN)/secondboot.bin
-KERNEL     = $(BIN)/third.bin
-FAT_TOOL   = $(BIN)/fat_write.exe
-TEMPLATE   = $(TOOLS)/fat_template.img
-SOURCES    = cstart.cpp            \
-             kernel.cpp            \
-             ihandlers.cpp         \
-             IA32MemoryManager.cpp \
-             operator.cpp          \
-             purevirtual.cpp       \
-             KeyBoardManager.cpp   \
-             tester.cpp            \
-             checker.cpp           \
-             string.cpp            \
-             SystemInfo.cpp        \
-             Semaphore.cpp         \
-             FDCDriver.cpp         \
-             GraphicalConsole.cpp  \
-             pic.cpp               \
-             io.cpp                \
-             rtc.cpp               \
-             disp.cpp              \
-             syscalls.cpp          \
-             BitMap.cpp            \
-             FAT12.cpp             \
-             test_higepon.cpp      \
-             sysresource.cpp       \
-             info.cpp              \
-             GDTUtil.cpp           \
-             IDTUtil.cpp           \
-             Process.cpp           \
-             Scheduler.cpp         \
-             ProcessManager.cpp    \
-             MessageServer.cpp     \
-             PageManager.cpp       \
-             elf.cpp               \
-             test_mjt.cpp          \
-             z.cpp                 \
-             MemoryManager.cpp
+ENV         = env
+VERSION     = 0.1.1
+DOXYGEN     = doxygen
+BIN         = ../bin
+LIST        = ../list
+TOOLS       = ../tools
+INCLUDE     = include
+USERINCLUDE = user
+CNTRINCLUDE = contrib/include
+CFINCLUDE   = -I$(INCLUDE) -I$(USERINCLUDE) -I$(CNTRINCLUDE)
+TARGET      = $(BIN)/mona.img
+KERNEL_IMG  = $(BIN)/KERNEL.IMG
+BOOT1       = $(BIN)/firstboot.bin
+BOOT2       = $(BIN)/secondboot.bin
+KERNEL      = $(BIN)/third.bin
+USER_PROCESS= $(BIN)/HELLO.ELF
+FAT_TOOL    = $(BIN)/fat_write.exe
+TEMPLATE    = $(TOOLS)/fat_template.img
+SOURCES     = cstart.cpp            \
+              kernel.cpp            \
+              ihandlers.cpp         \
+              IA32MemoryManager.cpp \
+              operator.cpp          \
+              purevirtual.cpp       \
+              KeyBoardManager.cpp   \
+              tester.cpp            \
+              checker.cpp           \
+              string.cpp            \
+              SystemInfo.cpp        \
+              Semaphore.cpp         \
+              FDCDriver.cpp         \
+              GraphicalConsole.cpp  \
+              pic.cpp               \
+              io.cpp                \
+              rtc.cpp               \
+              disp.cpp              \
+              syscalls.cpp          \
+              BitMap.cpp            \
+              FAT12.cpp             \
+              test_higepon.cpp      \
+              sysresource.cpp       \
+              info.cpp              \
+              GDTUtil.cpp           \
+              IDTUtil.cpp           \
+              Process.cpp           \
+              Scheduler.cpp         \
+              ProcessManager.cpp    \
+              MessageServer.cpp     \
+              PageManager.cpp       \
+              elf.cpp               \
+              test_mjt.cpp          \
+              z.cpp                 \
+              MemoryManager.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
 all : $(TARGET)
 
-$(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL)
+$(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL) $(USER_PROCESS)
 	cat $(BOOT2) $(KERNEL) > $(KERNEL_IMG)
 	(cat $(BOOT1);dd if=$(TEMPLATE) bs=512 skip=1 ) > $(TARGET)
 	$(FAT_TOOL) $(TARGET)
@@ -72,6 +72,11 @@ $(KERNEL) : $(OBJECTS) $(DRVROBJ) mode12h.o ihandler.o core.o userlib.o
 
 userlib.o : ./user/userlib.cpp
 	$(CC) $(CFLAGS) $(CFINCLUDE) -c ./user/userlib.cpp -o userlib.o
+
+$(USER_PROCESS) : userlib.o ./user/hello.cpp
+	$(CC) $(CFLAGS) $(CFINCLUDE) -c ./user/hello.cpp -o hello.o
+	ld -n -Ttext 0xC0000000 -static hello.o userlib.o -o $(USER_PROCESS)
+	objcopy --output-target=elf32-i386 $(USER_PROCESS)
 
 .SUFFIXES: .cpp .o
 .cpp.o:
@@ -99,7 +104,7 @@ depend:
 	gcc -MM $(CFINCLUDE) $(CFLAGS) -- $(SOURCES) > $(ENV)/dependencies
 
 clean :
-	rm -f $(OBJECTS) $(TARGET) $(BOOT1) $(BOOT2) $(KERNEL) $(KERNEL_IMG) $(FAT_TOOL) mode12h.o ihandler.o core.o userlib.o ../list/*.list
+	rm -f $(OBJECTS) $(TARGET) $(BOOT1) $(BOOT2) $(KERNEL) $(KERNEL_IMG) $(FAT_TOOL) $(USER_PROCESS) $(BIN)/mona.dbg mode12h.o ihandler.o core.o hello.o userlib.o ../list/*.list
 
 dist :
 	cd ../bin; zip  -9 ../../mona-$(VERSION)-image.zip  mona.img
