--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -50,7 +50,8 @@ SOURCES     = cstart.cpp            \
               elf.cpp               \
               test_mjt.cpp          \
               z.cpp                 \
-              MemoryManager.cpp
+              MemoryManager.cpp     \
+              Segments.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
