load Process not enough

--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -13,7 +13,7 @@ KERNEL_IMG  = $(BIN)/KERNEL.IMG
 BOOT1       = $(BIN)/firstboot.bin
 BOOT2       = $(BIN)/secondboot.bin
 KERNEL      = $(BIN)/third.bin
-USER_PROCESS= $(BIN)/HELLO.ELF
+USER_PROCESS= $(BIN)/USER.ELF
 FAT_TOOL    = $(BIN)/fat_write.exe
 TEMPLATE    = $(TOOLS)/fat_template.img
 SOURCES     = cstart.cpp            \
