--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -74,7 +74,7 @@ $(TARGET) : $(BOOT1) $(BOOT2) $(KERNEL) $(FAT_TOOL) $(USER_PROCESS)
 $(FAT_TOOL) : $(TOOLS)/fat_write.cpp FAT12.cpp include/FAT12.h string.cpp BitMap.cpp
 	$(CC) -DFS_TEST -o $(FAT_TOOL) $(TOOLS)/fat_write.cpp $(TOOLS)/HogeDriver.cpp FAT12.cpp string.cpp BitMap.cpp -idirafter include -idirafter $(USERINCLUDE) -idirafter $(TOOLS)
 
-$(KERNEL) : $(OBJECTS) $(DRVROBJ) mode12h.o ihandler.o core.o userlib.o $(USER_PROCESS)
+$(KERNEL) : $(OBJECTS) $(DRVROBJ) mode12h.o ihandler.o core.o userlib.o
 	$(LD) --Map kernel.map $(LFLAGS) -o$@ $(OBJECTS) mode12h.o ihandler.o core.o userlib.o -L$(CONTRIB_LIB) -lz
 	cp $@ $(BIN)/mona.dbg
 	$(NDISASM) -u $@ > $(LIST)/third.list
@@ -85,7 +85,7 @@ userlib.o : ./user/userlib.cpp
 
 $(USER_PROCESS) : userlib.o ./user/hello.cpp
 	$(CC) $(CFLAGS) $(CFINCLUDE) -c ./user/hello.cpp -o hello.o
-	ld -n -Ttext 0xA0000000 -static hello.o userlib.o -o $(USER_PROCESS)
+	ld -n -Ttext 0xC0000000 -static hello.o userlib.o -o $(USER_PROCESS)
 	objcopy --output-target=elf32-i386 $(USER_PROCESS)
 
 .SUFFIXES: .cpp .o
