load Process not enough

--- a/mona_v1.0/src/Makefile.in
+++ b/mona_v1.0/src/Makefile.in
@@ -76,7 +76,7 @@ userlib.o : ./user/userlib.cpp
 
 $(USER_PROCESS) : userlib.o ./user/hello.cpp
 	$(CC) $(CFLAGS) $(CFINCLUDE) -c ./user/hello.cpp -o hello.o
-	ld -n -Ttext 0xC0000000 -static hello.o userlib.o -o $(USER_PROCESS)
+	ld -n -Ttext 0xA0000000 -static hello.o userlib.o -o $(USER_PROCESS)
 	objcopy --output-target=elf32-i386 $(USER_PROCESS)
 
 .SUFFIXES: .cpp .o
