--- a/mona_v1.0/src/env/linux3.x.env
+++ b/mona_v1.0/src/env/linux3.x.env
@@ -5,5 +5,5 @@ LD         = ld
 STRIP      = strip
 CONTRIB_LIB= ./contrib/lib_linux
 LFLAGS     = -n -Ttext 0x1200 -static
-CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -ffreestanding -fno-builtin -Wall -c -g
+CFLAGS     = -nostdlib -fno-exceptions -fno-rtti -fno-builtin -Wall -c -g
 NFLAGS     = -DBUILD_ON_LINUX
