--- a/mona_v1.0/src/Makefile
+++ b/mona_v1.0/src/Makefile
@@ -52,6 +52,7 @@ SOURCES     = cstart.cpp            \
               sysresource.cpp       \
               Segments.cpp          \
               test_higepon.cpp      \
+              Mutex.cpp             \
 
 OBJECTS = $(SOURCES:.cpp=.o)
 
